@@ -2,7 +2,7 @@ Package: GlobalOptions
 Type: Package
 Title: Generate Functions to Get or Set Global Options
 Version: 0.1.0
-Date: 2018-5-22
+Date: 2018-6-4
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 3.3.0), methods
@@ -13,6 +13,6 @@ Description: It provides more configurations on the option values such as valida
     and filtering on the values, making options invisible or private.
 URL: https://github.com/jokergoo/GlobalOptions
 License: MIT + file LICENSE
-Packaged: 2018-5-22 00:00:00 UTC; Administrator
+Packaged: 2018-6-4 00:00:00 UTC; Administrator
 Repository: CRAN
-Date/Publication: 2018-5-22 00:00:00
+Date/Publication: 2018-6-4 00:00:00
