@@ -422,6 +422,36 @@ dump_opt(opt, "a")
 dump_opt(opt, "d")
 ```
 
+### Add new options
+
+New options can be added after the option function is created by explicitely
+specifying `ADD = TRUE`:
+
+```{r}
+opt = set_opt(a = 1)
+opt(b = 2, ADD = TRUE)
+opt
+```
+
+Note you cannot add new options by using `$` (or more precisely `$<-`)
+operator because `$` can only access options that have already been created.
+
+```{r, error = TRUE, purl = FALSE}
+opt$c = 3
+```
+
+Like using a complex configuration list when creating a new option in `set_opt()`, 
+here you can also use configuration list with `ADD = TRUE`.
+
+```{r, error = TRUE, purl = FALSE}
+opt(c = list(.value = "c", 
+             .class = "character"), 
+    ADD = TRUE)
+opt
+opt$c = 1
+```
+
+Of course you can put more than one options in `opt()` when adding them.
 
 ## Features for package development
 
@@ -483,7 +513,7 @@ opt$a
 
 
 The option object generated by `set_opt()` is actually a function. It contains four arguments:
-`...`, `RESET`, `READ.ONLY`, `LOCAL`. If you want to put the option function
+`...`, `RESET`, `READ.ONLY`, `LOCAL`, `ADD`. If you want to put the option function
 into a package, remember to document all the four arguments:
 
 ```{r}
